--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -8,15 +8,15 @@
                     <%= product.title %>
                 </h1>
                 <hr>
-                <img src="<%= product.imageUrl %>" alt="product.title">
+                <div>
+                    <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+                </div>
                 <h2>
                     <%= product.price %>
                 </h2>
                 <p>
                     <%= product.description %>
                 </p>
-                <form action="/cart" method="POST">
-                    <button class="btn" type="submit">Add to Cart</button>
-                </form>
+                <%- include('../includes/add-to-cart.ejs') %>
             </main>
             <%- include('../includes/end.ejs') %>
