adding deleting Btn on the cart and work on deleting product on the cart item

--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -9,7 +9,15 @@
                     <ul>
                         <% products.forEach(p=> { %>
                             <li>
-                                <%= p.productData.title %>(<%= p.qty %>)
+                                <p>
+                                    <%= p.productData.title %>(<%= p.qty %>)
+                                            <form action="/cart-delete-item" method="POST">
+                                                <input type="hidden" value="<%= p.productData.id %>" name="productId">
+                                                <button class="btn" type="submit">delete</button>
+
+                                            </form>
+                                </p>
+
                             </li>
                             <% }) %>
                     </ul>
