--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,11 +14,21 @@ main {
 	padding: 1rem;
 	margin: auto;
 }
+
+form {
+	display: inline;
+}
+
 .centered {
 	text-align: center;
 }
-form {
-	display: inline;
+
+.image {
+	height: 20rem;
+}
+
+.image img {
+	height: 100%;
 }
 
 .main-header {
@@ -192,6 +202,17 @@ form {
 .btn:hover,
 .btn:active {
 	background-color: #00695c;
+	color: white;
+}
+
+.btn.danger {
+	color: red;
+	border-color: red;
+}
+
+.btn.danger:hover,
+.btn.danger:active {
+	background: red;
 	color: white;
 }
 
