--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,30 +1,35 @@
 <%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/cart.css">
     </head>
 
     <body>
         <%- include('../includes/navigation.ejs') %>
-
             <main>
-                <% if(products.length> 0) { %>
-                    <ul>
+                <% if (products.length> 0) { %>
+                    <ul class="cart__item-list">
                         <% products.forEach(p=> { %>
-                            <li>
-                                <p>
-                                    <%= p.productData.title %>(<%= p.qty %>)
-                                            <form action="/cart-delete-item" method="POST">
-                                                <input type="hidden" value="<%= p.productData._id %>" name="productId">
-                                                <button class="btn" type="submit">delete</button>
-
-                                            </form>
-                                </p>
-
+                            <li class="cart__item">
+                                <h1>
+                                    <%= p.title %>
+                                </h1>
+                                <h2>Quantity: <%= p.quantity %>
+                                </h2>
+                                <form action="/cart-delete-item" method="POST">
+                                    <input type="hidden" value="<%= p._id %>" name="productId">
+                                    <button class="btn danger" type="submit">Delete</button>
+                                </form>
                             </li>
                             <% }) %>
                     </ul>
-                    <% }else { %>
+                    <hr>
+                    <div class="centered">
+                        <form action="/create-order" method="POST">
+                            <button type="submit" class="btn">Order Now!</button>
+                        </form>
+                    </div>
 
-                        <h1>No products in carts</h1>
+                    <% } else { %>
+                        <h1>No Products in Cart!</h1>
                         <% } %>
             </main>
-
             <%- include('../includes/end.ejs') %>
