--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -26,11 +26,10 @@
                     </a>
                 </li>
                 <% } %>
-
         </ul>
         <ul class="main-header__item-list">
             <li class="main-header__item">
-                <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">login</a>
+                <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
             </li>
         </ul>
     </nav>
