--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -31,6 +31,11 @@
             <li class="main-header__item">
                 <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
             </li>
+            <li class="main-header__item">
+                <form action="/logout" method="POST">
+                    <button type="submit">logout</button>
+                </form>
+            </li>
         </ul>
     </nav>
 </header>
