--- a/public/css/main.css
+++ b/public/css/main.css
@@ -225,6 +225,25 @@ form {
 	color: white;
 }
 
+.user-message {
+	margin: auto;
+	width: 90%;
+	padding: 1rem;
+	border-radius: 3px;
+	border: 1px solid rgb(65, 65, 253);
+	background-color: rgb(147, 147, 252);
+	text-align: center;
+}
+.user-message--error {
+	margin: auto;
+	width: 90%;
+	padding: 1rem;
+	border-radius: 3px;
+	border: 1px solid rgb(253, 4, 4);
+	background-color: rgb(253, 134, 134);
+	text-align: center;
+}
+
 @media (min-width: 768px) {
 	.main-header__nav {
 		display: flex;
@@ -232,5 +251,8 @@ form {
 
 	#side-menu-toggle {
 		display: none;
+	}
+	.user-message {
+		width: 30rem;
 	}
 }
