--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -38,6 +38,7 @@
                 <% } else { %>
                     <li class="main-header__item">
                         <form action="/logout" method="post">
+                            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                             <button type="submit">Logout</button>
                         </form>
                     </li>
